# DebateMyTicket

./: .gitignore  README.md  agents.py  app.py  pyproject.toml  requirements.txt
debate_my_ticket/: langgraph_runner.py
debate_my_ticket/agents/: anti_payment.py  pro_payment.py
debate_my_ticket/backend/: __init__.py  info_scraper.py  ocr_processor.py  ticket_validator.py
debate_my_ticket/utils/: helpers.py  prompts.py
