[project]
name = "debatemyticket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "langgraph==0.0.15",
    "litellm==1.30.7",
    "openai==1.12.0",
    "pandas==2.2.1",
    "pillow==10.2.0",
    "pytesseract==0.3.10",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "streamlit==1.32.0",
]
